# tango-core

./: Cargo.toml
datachannel-wrapper/: Cargo.toml
datachannel-wrapper/src/: lib.rs
tango-core/: Cargo.toml
tango-core/src/: battle.rs  facade.rs  game.rs  hooks.rs  ipc.rs  lib.rs  main.rs  negotiation.rs  protocol.rs  shadow.rs
tango-core/src/hooks/: bn6.rs
tango-matchmaking/: Cargo.toml
tango-matchmaking/src/: client.rs  server.rs
tango-protos/: Cargo.toml  build.rs
tango-protos/src/: ipc.proto  lib.rs  matchmaking.proto  netplay.proto
