[workspace]
resolver = "2"
members = [
    "mgba",
    "tango-core",
    "tango-matchmaking",
    "mgba-sys",
    "keymaptool",
    "datachannel-wrapper",
]

[patch.crates-io]
webrtc-util = { git = "https://github.com/webrtc-rs/util", rev = "2d193c0fd146e4d48ce63d07dbd085702b60aac2" }
datachannel = { git = "https://github.com/bigfarts/datachannel-rs", rev = "1794a366142040e83df51861a6b7bb15ec6cbacb" }
