[package]
name = "tango-matchmaking"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0"
env_logger = "0.9.0"
log = "0.4"
futures-util = "0.3.21"
webrtc = "0.4.0"
envconfig = "0.10.0"
git-version = "0.3.5"
tango-protos = { path = "../tango-protos" }
prost = "0.10"
bytes = "1.1.0"
